# cuLA

./: README.md  REPO_LAYOUT.md  USAGE.md  pyproject.toml  setup.py
.github/workflows/: lint.yml
benchmarks/: bench_chunk_delta_h.py  bench_fwd_o.py  bench_intracard_cp.py  bench_intracard_cp_sm90.py  bench_kda_bwd_wy_dqkg_sm100.py  bench_kda_decode.py  bench_kda_fused_fwd.py  bench_la_decode_mtp.py  bench_la_decode_mtp_vs_sglang.py  bench_la_decode_vs_fla.py  bench_la_kvbuffer.py  bench_lightning_attn.py  bench_linear_attn.py  profile_state_update_kvbuffer.py  profile_verify_kvbuffer.py  utils.py
csrc/api/: kda_sm100.cu  kda_sm90.cu  pybind.cu
csrc/kda/sm100/: kda_fwd_intra_kernel_sm100.hpp  kda_fwd_intra_mainloop_sm100.hpp  kda_fwd_recomp_w_u_kernel_sm100.hpp  kda_fwd_recomp_w_u_mainloop_sm100.hpp
csrc/kda/sm90/: kda_fwd_sm90.cu  kda_fwd_sm90_safe_gate.cu  prefill_kernel.hpp  prefill_kernel_kda_fwd_sm90.cuh
cula/: __init__.py  cudac.py  utils.py
cula/kda/: __init__.py  auto_route.py  chunk.py  chunk_bwd.py  chunk_fwd.py  chunk_intra.py  cp_context.py  cp_h_boundary.py  gate_l2norm_fused.py  hopper_fused_fwd_opt.py  l2norm_qk_fused.py  wy_intra.py  wy_recompute.py
cula/lightning/: __init__.py  la_decode_mtp.py  la_state_update_kvbuffer.py  la_update_kvbuffer.py  la_verify_kvbuffer.py
cula/ops/: __init__.py  chunk_delta_h.py  ptx.py
cula/ops/experimental/: __init__.py
cula/ops/kda/: __init__.py  policy.py
cula/ops/lightning/: __init__.py
docs/: chunk_delta_h_pipeline.md
scripts/: build_wheel.sh
tests/: _la_mtp_ref.py  conftest.py  test_chunk_delta_h.py  test_compare_with_fla.py  test_fwd_o.py  test_intracard_cp.py  test_intracard_cp_sm90.py  test_la_decode.py  test_la_decode_mtp.py  test_la_decode_pool.py  test_la_kvbuffer.py  test_la_verify_kvbuffer.py  test_lightning_attn.py  test_ptx_umma_masked.py  test_ptx_umma_ws.py
(+22 files in other folders)
